--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -58,12 +58,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for log, is_section, session_type_title, predefined, meeting_date, code_dl, code_eh, code_ms, code_pi, code_pm, code_vc, code_dtm, purpose, project_name in logs %}
+                {% for log, is_section, session_type_title, predefined, is_hidden, meeting_date, code_dl, code_eh, code_ms, code_pi, code_pm, code_vc, code_dtm, purpose, project_name in logs %}
                 <tr data-id="{{ log.id }}"
                     data-project-id="{{ log.Project_ID if log.Project_ID is not none else '' }}"
                     data-meeting-number="{{ log.Meeting_Number }}"
                     data-meeting-date="{{ meeting_date.strftime('%Y-%m-%d') if meeting_date else '' }}"
                     data-is-section="{{ is_section|lower }}"
+                    data-is-hidden="{{ is_hidden|lower }}"
                     data-meeting-seq="{{ log.Meeting_Seq }}"
                     data-start-time="{{ log.Start_Time.strftime('%H:%M') if log.Start_Time is not none else '' }}"
                     data-session-title="{{ session_type_title if predefined else (log.Session_Title if log.Session_Title is not none else '') }}"
@@ -73,7 +74,7 @@
                     data-duration-min="{{ log.Duration_Min if log.Duration_Min is not none else '' }}"
                     data-duration-max="{{ log.Duration_Max if log.Duration_Max is not none else '' }}"
                     data-status="{{ log.Status if log.Status else '' }}"
-                    class="{{ 'section-row' if is_section else '' }}">
+                    class="{{ 'section-row' if is_section else '' }} {{ 'hidden-session' if is_hidden else '' }}">
 
                     {% if is_section %}
                         <td colspan="4" class="non-edit-mode-cell">
@@ -86,23 +87,22 @@
                                 {{ session_type_title }}
                             {% else %}
                                 {% if session_type_title == "Pathway Speech" %}
-                                    <div class="tooltip-container" tabindex="0">
-                                        {{ log.Session_Title }}
-                                        {% set contact = contacts|selectattr('id', 'equalto', log.Owner_ID)|first %}
-                                        {% if contact and contact.Working_Path and config.PATHWAY_MAPPING[contact.Working_Path] %}
-                                            {% set pathway_code_map = {'DL': code_dl, 'EH': code_eh, 'MS': code_ms, 'PI': code_pi, 'PM': code_pm, 'VC': code_vc, 'DTM': code_dtm} %}
-                                            {% set pathway_suffix = config.PATHWAY_MAPPING[contact.Working_Path] %}
-                                            {% if pathway_suffix and pathway_code_map[pathway_suffix] %}
-                                                ({{ pathway_suffix }}{{ pathway_code_map[pathway_suffix] }})
-                                            {% endif %}
+                                    {% set contact = contacts|selectattr('id', 'equalto', log.Owner_ID)|first %}
+                                    {% set project_code_str = '' %}
+                                    {% if contact and contact.Working_Path and config.PATHWAY_MAPPING[contact.Working_Path] %}
+                                        {% set pathway_code_map = {'DL': code_dl, 'EH': code_eh, 'MS': code_ms, 'PI': code_pi, 'PM': code_pm, 'VC': code_vc, 'DTM': code_dtm} %}
+                                        {% set pathway_suffix = config.PATHWAY_MAPPING[contact.Working_Path] %}
+                                        {% if pathway_suffix and pathway_code_map[pathway_suffix] %}
+                                            {% set project_code_str = ' (' ~ pathway_suffix ~ pathway_code_map[pathway_suffix] ~ ')' %}
                                         {% endif %}
+                                    {% endif %}
+                                    <div class="tooltip-container" tabindex="0">
+                                        {{ log.Session_Title }}{{ project_code_str }}
                                         {% if purpose %}
-                                            <div class="tooltip">
-                                                {% if project_name %}
-                                                    <strong>{{ project_name }}</strong><br><br>
-                                                {% endif %}
-                                                {{ purpose }}
-                                            </div>
+                                        <div class="speech-tooltip">
+                                            <strong>{{ project_name }}</strong><br>
+                                            {{ purpose }}
+                                        </div>
                                         {% endif %}
                                     </div>
                                 {% elif session_type_title == 'Evaluation' %}
