feat(login): Add email field in the Users table and accept login as email.

--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -71,6 +71,7 @@
 }
 
 .form-table input[type="text"],
+.form-table input[type="email"],
 .form-table input[type="password"],
 .form-table input[type="number"],
 .form-table select {
