--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -172,8 +172,8 @@
                         <td><label for="ge_style">GE Style:</label></td>
                         <td>
                             <select id="ge_style" name="ge_style" required>
-                                <option value="instant" selected>Instant</option>
-                                <option value="delayed">Delayed</option>
+                                <option value="immediate" selected>Immediate</option>
+                                <option value="deferred">Deferred</option>
                             </select>
                         </td>
                     </tr>
