--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         <h1>VPE Master Login</h1>
         <form action="{{ url_for('main_bp.login') }}" method="post" class="login-form">
             <div>
-                <label for="username">Username:</label>
+                <label for="username">Username or Email:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div>
