--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <div class="nav-pane" id="nav-pane">
         <div class="nav-header">
             <a href="#" class="nav-toggle" id="pc-nav-toggle"><i class="fas fa-bars"></i></a>
-            <h2 class="nav-title">VPE Master</h2>
+            <h2 class="nav-title">VPE Master<sup>BETA</sup></h2>
         </div>
         <ul class="nav-links">
             <li class="{% if request.endpoint and request.endpoint.startswith('agenda_bp') %}active{% endif %}">
@@ -57,7 +57,7 @@
                     <span>Pathway Library</span>
                 </a>
             </li>
-            {% if session.get('user_role') in ['Admin', 'VPE'] %}
+            {% if session.get('user_role') == 'Admin' %}
             <li class="{% if request.endpoint and request.endpoint.startswith('contacts_bp') %}active{% endif %}">
                 <a href="{{ url_for('contacts_bp.show_contacts') }}">
                     <i class="fas fa-book nav-icon"></i>
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
