--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <img src="{{ url_for('static', filename='images/SHLTMC-logo.png') }}" alt="SHLTMC Logo" style="width: 150px; margin-bottom: 20px;">
-        <h1>VPE Master Login</h1>
+        <h1>Meeting Manager Login</h1>
         <form action="{{ url_for('main_bp.login') }}" method="post" class="login-form">
             <div>
                 <label for="username">Username or Email:</label>
