fix(agenda): fix the paired sessions update issue

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -3,7 +3,7 @@
 {% block title %}Meeting Agenda{% endblock %}
 
 {% block content %}
-    <h1>Meeting Manager</h1>
+    <h1>Meeting Agenda</h1>
     <br/>
     <div class="action-bar">
         <div class="action-bar-left">
